--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
   - Make sure feature.pm is only "test.recommends", as is optional prior
     to 5.10 (GH #4, kentnl)
+  - skip NYTProf files in dist (GH #6) [kentnl]
+  - doc patches (GH #3) [David Schmidt]
 
 0.51      2015-02-04
 
