--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - new function matchr() which returns results as hashref
+    instead of hash (RT#106515) [requested by djerius@cpan.org]
 
 0.53      2015-06-03
   - no import from POSIX (RT#104914) [reported by ether]
