--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - spelling error, sync with Debian [Lucas Kanashiro]
 
 0.54      2015-09-02
   - new function matchr() which returns results as arrayref
