--- a/Changes
+++ b/Changes
@@ -1,9 +1,12 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-
+  - fix filter expressions containing newlines [reported by David Schmidt]
+  - fix quote escaping (please check your edge cases) [Igor Sverdlov]
+  - replace List::MoreUtil with List::Util [Dan Book, Igor Sverdlov]
+  - doc cleanup [Kivanc Yazan]
   - 'idx' attribute added in 0.56 was not added to Data::DPath::Attrs,
-    so didn't acquire an accessor.
+    so didn't acquire an accessor [Diab Jerius]
 
 0.57      2017-08-18
   - polished Safe.pm handling to cooperate with older Perl and other modules
